--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^48.0.7",
+    "i18next": "^23.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.0",
     "react-native": "0.71.3",
     "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "4.5.0",
