--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "^48.0.7",
     "i18next": "^23.1.0",
     "react": "18.2.0",
